server/operations/kubernetes/base/server-follow-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-follow-1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-follow-1-app
  template:
    metadata:
      labels:
        app: server-follow-1-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: secret-shared-server
          image: ghcr.io/jproyo/secret-shared-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7071
              name: raft-fol-1-p
            - containerPort: 8080
              name: http-fol-1-p

          livenessProbe:
              failureThreshold: 5
              httpGet:
                path: /healthz
                port: http-fol-1-p
              initialDelaySeconds: 30
              timeoutSeconds: 10
              periodSeconds: 15

          volumeMounts:
            - name: server-toml
              mountPath: /app/config/default.toml
              subPath: default.toml
      volumes:
        - name: server-toml
          configMap:
            name: server-toml
