server/operations/kubernetes/base/server-leader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-leader-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-leader-app
  template:
    metadata:
      labels:
        app: server-leader-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: secret-shared-server
          image: secret-shared-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7070
              name: raft-lead-p
            - containerPort: 8080
              name: http-lead-p
          livenessProbe:
              failureThreshold: 5
              httpGet:
                path: /healthz
                port: http-lead-p
              initialDelaySeconds: 30
              timeoutSeconds: 10
              periodSeconds: 15

          volumeMounts:
            - name: server-toml
              mountPath: /app/config/default.toml
              subPath: default.toml
      volumes:
        - name: server-toml
          configMap:
            name: server-toml
