server/operations/kubernetes/base/server-follow-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-follow-2-service
spec:
  selector:
    app: server-follow-2-app
  ports:
    - port: 8082
      protocol: TCP
      targetPort: http-fol-2-p
      name: http
